2011-04-21  David Engster  <dengste@eml.cc>

	* shimbun.el (shimbun-xml-parse-buffer): New function for XML parsing
	of whole buffer, using libxml if available.

	* sb-atom.el (shimbun-atom-get-headers): Use it.

	* sb-atom-hash.el (content-hash-update-items-impl): Use it.

	* sb-rss.el (shimbun-rss-get-headers): Use it.

	* sb-rss-hash.el (content-hash-update-items-impl): Use it.

2011-04-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-make-html-contents)
	(shimbun-header-insert-and-buffer-string):
	* sb-multi.el (shimbun-multi-retrieve-next-pages):
	Make base url a directory name.

2011-04-06  David Engster  <dengste@eml.cc>

	* nnshimbun.el: Add 'server-marks when declaring nnshimbun backend.

2011-01-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-get-headers): Improve regexp.

2011-01-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-group-table): Update index urls for
	column groups.
	(shimbun-sankei-multi-next-url, shimbun-sankei-clear-contents): Adapt
	to new html layout.

2010-12-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-beginning-of-tag, shimbun-end-of-tag): Move
	definitions to w3m-util.el as w3m-beginning-of-tag and w3m-end-of-tag.

2010-12-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-group-table): Update regexp for rss groups.

2010-12-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnshimbun.el (nnshimbun-request-set-mark):
	Use nnheader-update-marks-actions if available.

2010-11-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-yahoo.el (shimbun-yahoo-groups-table): Update regexp for topnews.
	(shimbun-yahoo-content-start, shimbun-yahoo-content-end): Update.
	(shimbun-clear-contents): Remove override.

2010-11-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-remove-tags): Work strictly if optional 2nd arg
	is neither nil nor a string.

	* sb-asahi.el (shimbun-asahi-prepare-article): Move removing of form,